--- a/unit 1/11 animation.html
+++ b/unit 1/11 animation.html
@@ -23,7 +23,7 @@ window.onload = init;
 </script>
 <body>
     <form>
-        <img id = "myimg" src = "">
+        <img id = "myimg" src = "" alt="see the image">
         <center>
             <p>click the below button to move the image right</p>
             <input type = "button" value = "click me" onclick = moveRight(); />
