--- a/unit 1/09 auto image slide .html
+++ b/unit 1/09 auto image slide .html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body style="margin: 0;">
-    <img name="slide" width=50% height="60%"
+    <img name="slide" width=50% height="60%" alt="see the image here">
     
 </body>
 </html>
